# synth

./: .gitignore  CMakeLists.txt
src/: dynamic_array.c  dynamic_array.h  filter.c  filter.h  main.c  oscillator.c  oscillator.h  synth.c  synth.h  ui_manager.c  ui_manager.h  ui_widget.c  ui_widget.h
